<resources>
    <string name="app_name">Spot Check</string>

    <string name="title_activity_google_maps">Spot Check</string>
    <string name="title_activity_create_spot_entry">Create Spot</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Re-enter Password</string>
    <string name="prompt_full_name">First and Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_ime">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_fullName">This name is invalid</string>
    <string name="error_passwords_different">Passwords don\'t match</string>

    <string name="auth_failed">Incorrect email and/or password.</string>
    <string name="title_activity_register">Register</string>
    <string name="place_error">Not a vaild place</string>
    <string name="rate_input_error">Rate must be greater than $0.00 and less than $1000.00</string>
    <string name="address_placeholder">Address</string>
    <string name="owner_name_placeholder">Owner Name</string>
    <string name="edit_spot_button">Edit Spot</string>
    <string name="edit_spot_picture_button">Change Spot Picture</string>
    <string name="rent_button_text">Rent</string>
    <string name="delete_button_text">Delete</string>
    <string name="address_view">Address:</string>
    <string name="rate_view">Rate:</string>
    <string name="per_hour">/hour</string>
    <string name="to">to</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
