<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!-- The main content view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/sc_custom_map_toolbar"
            android:id="@+id/custom_toolbar"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:map="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/map"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context="com.ucsb.cs48.spotcheck.GoogleMapsActivity" >

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                app:cardCornerRadius="12dp"
                android:alpha="0.75"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/start_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:padding="5dp"
                        android:alpha="1"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:onClick="startTimeTapped"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/to"
                        android:textColor="@color/colorPrimary"
                        android:alpha="1"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"/>

                    <Button
                        android:id="@+id/end_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time"
                        android:padding="5dp"
                        android:alpha="1"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:onClick="endTimeTapped"/>
                </LinearLayout>



            </android.support.v7.widget.CardView>



        </fragment>
    </LinearLayout>


<!-- The navigation drawer -->
<android.support.design.widget.NavigationView
    android:id="@+id/navigation"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:menu="@menu/main_map_menu" />

</android.support.v4.widget.DrawerLayout>